# ntp-projekat

./: .gitignore  README.md
ApiGateway/: go.mod  go.sum  main.go
ApiGateway/handler/: appointmentService.go  carServiceService.go  reportService.go  reviewService.go  userService.go  vehicleService.go
ApiGateway/model/: model.go
ApiGateway/router/: router.go
AppointmentService/: go.mod  go.sum  main.go
AppointmentService/handler/: handler.go
AppointmentService/model/: model.go
AppointmentService/repository/: repository.go
AppointmentService/request/: request.go
AppointmentService/resources/: app_cancelled.html  app_finished.html  req_accepted.html  req_rejected.html
AppointmentService/response/: response.go
AppointmentService/router/: router.go
AppointmentService/service/: service.go
CarServiceService/: go.mod  main.go
CarServiceService/handler/: handler.go
CarServiceService/model/: model.go
CarServiceService/repository/: repository.go
CarServiceService/request/: request.go
CarServiceService/response/: response.go
CarServiceService/router/: router.go
CarServiceService/service/: service.go
EmailService/: go.mod  go.sum  main.go
EmailService/handler/: handler.go
EmailService/helper/: helper.go
EmailService/model/: model.go
ReviewService/: go.mod  go.sum  main.go
ReviewService/model/: model.go
UserService/: go.mod  go.sum  main.go
VehicleService/: go.mod  go.sum  main.go
client-app/: package-lock.json  package.json
report-service/: .gitignore  Cargo.toml  Rocket.toml
report-service/src/: handle.rs  main.rs  model.rs
(+110 files in other folders)
