[package]
name = "report-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
rocket = { varsion = "0.5.0-rc.2", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = "*"
serde_json = "*"
serde_derive = "*"